--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "lets-i18n",
   "version": "0.0.1",
   "description": "easy i18n for next.js apps",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "babel src --out-dir dist",
+    "dev": "babel src --watch --out-dir dist",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +23,18 @@
   "bugs": {
     "url": "https://github.com/viniciusCamargo/lets-i18n/issues"
   },
-  "homepage": "https://github.com/viniciusCamargo/lets-i18n#readme"
+  "homepage": "https://github.com/viniciusCamargo/lets-i18n#readme",
+  "dependencies": {
+    "lodash.get": "4.x"
+  },
+  "peerDependencies": {
+    "react": "16.x",
+    "prop-types": "15.x"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  }
 }
