--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1"
+  },
+  "engines": {
+    "node": "9.2.0",
+    "npm": "5.6.0"
   }
 }
