--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-  "semi": false,
-  "singleQuote": true,
   "jsxBracketSameLine": true,
-  "arrowParens": "always",
-  "printWidth": 80
+  "arrowParens": "always"
 }
