--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "react"],
-  "plugins": ["transform-class-properties"]
+  "presets": ["@babel/preset-typescript", "@babel/env", "@babel/react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
