--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.2.5",
   "description": "easy i18n for next.js apps",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "unpkg": "dist/index.umd.js",
   "scripts": {
-    "build": "microbundle --entry src/index.tsx",
-    "dev": "microbundle watch --entry src/index.tsx",
+    "build": "webpack --mode production",
     "prepare": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/viniciusCamargo/lets-i18n.git"
   },
+  "files": [
+    "/dist/index.js"
+  ],
   "keywords": [
     "i18n",
     "nextjs",
@@ -36,12 +36,33 @@
     "react": "16.x"
   },
   "devDependencies": {
-    "@types/react": "16.x",
-    "microbundle": "0.11.x",
-    "react": "16.x"
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.12",
+    "@types/react": "^16.8.16",
+    "@types/react-dom": "^16.8.4",
+    "babel-loader": "^8.0.5",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "jest": "^24.8.0",
+    "react": "16.x",
+    "react-dom": "^16.8.6",
+    "typescript": "^3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2"
   },
   "engines": {
     "node": "10.15.0",
     "npm": "6.9.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   }
 }
