--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-preset-react": "^6.24.1"
   },
   "engines": {
-    "node": "15.3.0",
-    "npm": "7.0.14"
+    "node": ">=16.0.0",
+    "npm": ">=7.10.0"
   }
 }
